quiz/deploy/quiz.css
body {

}

nav {
  border: none;
  border-spacing: 0;
  border-top-color: rgb(42, 166, 218);
  border-top-style: solid;
  border-top-width: 1px;
  border-bottom-color: rgb(42, 166, 218);
  border-bottom-style: solid;
  border-bottom-width: 1px;
  background-color: #eee;
  margin: 0;
  padding: 7px;
}
nav a {
  color: #2aa6da;
  text-decoration: none;
  font-weight: bold;
}
nav a :hover {
  text-decoration: underline;
}
nav span.sep {
  color: #ccc;
  margin-left: 7px;
  margin-right: 7px;
}

table.question {
  margin-top: 15px;
  border: none;
  border-spacing: 0;
  border-top-color: rgb(42, 166, 218);
  border-top-style: solid;
  border-top-width: 1px;
  border-bottom-color: rgb(42, 166, 218);
  border-bottom-style: solid;
  border-bottom-width: 1px;
  background-color: #eee;
}

td {
  border: none;
  border-width:0;
  border-top-width: 1px;
  border-top-color: rgb(39, 61, 94);
  border-top-style: solid;
  margin: 0;
  padding: 7px;
}
th {
  margin: 0;
  padding: 7px;
}

th.qname {
  vertical-align: top;
}
a.qname {
  /*margin-right: 0.5em;*/
  font-variant: normal;
  font-weight: bold;
  color: #2aa6da;
  text-decoration: none;
}
a.qname:hover {
  text-decoration: underline;
}

th.qtext {
  vertical-align: top;
  text-align: left;
  font-variant: normal;
  font-weight: normal;
  width: 100%;
}

td.answer {
  text-align: left;
  font-size: 90%
}

td.input {
  text-align: center;
}

td.skip {
  border-top-width: 2px;
  text-align: right;
}

td.submit {
  border-top-width: 2px;
  text-align: left;
}

div.stats {
  font-size: 80%;
  margin: 0;
  margin-top: 15px;
  border: none;
  border-top-color: rgb(42, 166, 218);
  border-top-style: solid;
  border-top-width: 1px;
  border-bottom-color: rgb(42, 166, 218);
  border-bottom-style: solid;
  border-bottom-width: 1px;
  background-color: #eee;
  padding: 7px;
}

div.stats span {
  margin-right: 10px;
}

div.stats span.statstitle {
  color: #2aa6da;
  font-weight: bold;
  display: block;
}

div.stats span.prob {
  color: #2aa6da;
  font-weight: bold;
  display: block;
}

div.stats progress.prob {
  width: 100%;
  max-width: 340px;
}

